--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
   font-family: Raleway Light;
+  text-align: center;
 }
 
 span.info {
@@ -23,4 +24,24 @@ span.info {
 
 p#price-output {
   font-size: 2.0em;
+}
+
+img {
+  max-width: 90%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+}
+
+.title {
+  text-decoration: underline;
+  margin-right: 40px;
+}
+
+#left-column {
+  text-align: right;
+  border-width: 1px;
+  border-style: solid;
+  padding: 20px;
 }
